crates/swc/tests/tsc-references/classExtendsItselfIndirectly3.1.normal.js
//// [classExtendsItselfIndirectly_file1.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
import { _ as _create_super } from "@swc/helpers/_/_create_super";
var C = /*#__PURE__*/ function(E1) {
    "use strict";
    _inherits(C, E1);
    var _super = _create_super(C);
    function C() {
        _class_call_check(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(E);
//// [classExtendsItselfIndirectly_file2.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
import { _ as _create_super } from "@swc/helpers/_/_create_super";
var D = /*#__PURE__*/ function(C1) {
    "use strict";
    _inherits(D, C1);
    var _super = _create_super(D);
    function D() {
        _class_call_check(this, D);
        return _super.apply(this, arguments);
    }
    return D;
}(C);
//// [classExtendsItselfIndirectly_file3.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
import { _ as _create_super } from "@swc/helpers/_/_create_super";
var E = /*#__PURE__*/ function(D1) {
    "use strict";
    _inherits(E, D1);
    var _super = _create_super(E);
    function E() {
        _class_call_check(this, E);
        return _super.apply(this, arguments);
    }
    return E;
}(D);
//// [classExtendsItselfIndirectly_file4.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
import { _ as _create_super } from "@swc/helpers/_/_create_super";
var C2 = /*#__PURE__*/ function(E21) {
    "use strict";
    _inherits(C2, E21);
    var _super = _create_super(C2);
    function C2() {
        _class_call_check(this, C2);
        return _super.apply(this, arguments);
    }
    return C2;
} // error
(E2);
//// [classExtendsItselfIndirectly_file5.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
import { _ as _create_super } from "@swc/helpers/_/_create_super";
var D2 = /*#__PURE__*/ function(C21) {
    "use strict";
    _inherits(D2, C21);
    var _super = _create_super(D2);
    function D2() {
        _class_call_check(this, D2);
        return _super.apply(this, arguments);
    }
    return D2;
}(C2);
//// [classExtendsItselfIndirectly_file6.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
import { _ as _create_super } from "@swc/helpers/_/_create_super";
var E2 = /*#__PURE__*/ function(D21) {
    "use strict";
    _inherits(E2, D21);
    var _super = _create_super(E2);
    function E2() {
        _class_call_check(this, E2);
        return _super.apply(this, arguments);
    }
    return E2;
}(D2);
